# IntelOIDenoiser

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct  conanfile.txt
cmake/: FindOpenImageDenoise.cmake
contrib/oidn/include/OpenImageDenoise/: config.h  version.h
contrib/oidn/lib/: OpenImageDenoise.lib  tbb.lib  tbbmalloc.lib
src/: main.cpp
